--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,9 @@ body {
     background-color: #ffffff;
     margin: 0;
     padding: 0;
+    -webkit-box-shadow: inset 0px 0px 35px -10px #000000; 
+    box-shadow: inset 0px 0px 35px -10px #000000;
+    height: 150vh;
 }
 
 .banner-container {
@@ -18,12 +21,15 @@ body {
 
 .brand {
     display: grid;
-    color: rgb(68, 67, 67);
-    font-family: 'Eczar', serif;
-    font-size: 42px;
     letter-spacing: 2px;
     margin-left: 5%;
     padding: 2%;
+}
+
+.dl-btn a {
+    padding: 3%;
+    border-radius: 16px;
+    background-color: #ffffff;
 }
 
 .download {
@@ -34,25 +40,104 @@ body {
     font-size: 32px;
 }
 
+.fa-code {
+    color: rgb(68, 67, 67);
+    font-size: 36px;
+}
+
 .fa-download {
     padding-left: 2%;
-    color: rgb(70, 34, 110);
+    color: rgb(0, 0, 0);
     opacity: 0.9;
-    filter:drop-shadow(0 0 0.75rem rgba(72, 34, 177, 0.66));
+    filter:drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.66));
+}
+
+.fa-html5 {
+    color: #F06529;
+}
+
+.fa-css3-alt {
+    color: #309edb;
+}
+
+.fa-js-square {
+    color: #eed818;
+    -webkit-box-shadow: inset 0px 0px 0px 0px #000000; 
+    box-shadow: inset 0px 0px 0px 0px #000000;
+}
+
+.fa-react {
+    color: #32d8ff;
+}
+
+.head {
+    color: rgb(68, 67, 67);
+    font-family: 'Eczar', serif;
+    font-size: 2rem;
+}
+
+.subhead {
+    padding-left: 0.5%;
+}
+
+.fab {
+    padding-right: 3%;
+    padding-left: 1%;
+    font-size: 36px;
+}
+
+.info-container {
+    display: grid;
+    width: 90%;
+    margin-right: 5%;
+    margin-left: 5%;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 40% 60%;
+    border: 1px solid #ffffff;
+    border-radius: 6px;
+    -webkit-box-shadow: 0px 0px 13px 4px rgba(0,0,0,0.20); 
+    box-shadow: 0px 0px 13px 4px rgba(0,0,0,0.20);
+}
+
+p {
+    font-family: 'Eczar', serif;
+    color: rgb(68, 67, 67);
 }
 
 .profile {
-    padding-left: 4%;
+    display: grid;
+    width: 90%;
+}
+
+.profile-skills {
+    display: grid;
+    text-align: center;
+    margin-right: 10%;
 }
 
 .profile-pic {
-    max-width: 20%;
-    min-width: 20%;
+    max-width: 60%;
+    min-width: 60%;
     height: auto;
     border-radius: 50%;
+    margin-left: 10%;
+    margin-top: 2%;
+    margin-bottom: 2%;
     border: 2px solid white;
     -webkit-box-shadow: 0px 0px 13px 4px rgba(0,0,0,0.20); 
     box-shadow: 0px 0px 13px 4px rgba(0,0,0,0.20);
+}
+
+.skill-head {
+    text-align: center;
+    font-size: 2rem;
+    margin: 0;
+}
+
+.coffee-cup {
+    font-size: 2rem;
+    margin: 0;
 }
 
 /* KEYFRAME / ANIMATION */
