--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,26 @@
+.css {
+    font-size: 3rem;
+    color: #264de4
+}
+
+.coffee {
+    font-size: 2.5rem;
+    color: #af8d59;
+}
+
 .highlighter {
     font-weight: bold;
     font-size: 1.1rem;
+}
+
+.html {
+    font-size: 3rem;
+    color: #e34c26
+}
+
+.javascript {
+    font-size: 3rem;
+    color: #F0DB4F;
 }
 
 .nowrap {
@@ -10,13 +30,18 @@
 .profilePic {
     border-radius: 50%;
     border: 1px solid white;
-    width: 30%;
+    width: 20%;
     -webkit-box-shadow: 0px 0px 50px -20px #000000; 
     box-shadow: 0px 0px 50px -20px #000000;
 }
 
 .py-24 {
     padding-top: 3rem;
+}
+
+.react {
+    font-size: 3rem;
+    color: #32d8ff;
 }
 
 .resumeBtn {
@@ -27,4 +52,17 @@
 .resumeBtn:hover {
     background-color: #a4c0ff;
     color: #000000;
+}
+
+.ruby {
+    font-size: 3rem;
+    color: #e81522;
+}
+
+.skills {
+    background-color: #e0e0e0;
+}
+
+.smile {
+    font-size: 1.5rem;
 }
