--- a/src/main.css
+++ b/src/main.css
@@ -35,6 +35,10 @@
     box-shadow: 0px 0px 50px -20px #000000;
 }
 
+.projectBox {
+    background-color: rgba(73, 88, 129, 0.3);
+}
+
 .py-24 {
     padding-top: 3rem;
 }
@@ -57,6 +61,10 @@
 .ruby {
     font-size: 3rem;
     color: #e81522;
+}
+
+.showcase {
+    background-color: #b1b1b100;
 }
 
 .skills {
